--- a/_config.yml
+++ b/_config.yml
@@ -256,8 +256,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Repetto]
+  first_name: [Luca]
 
   style: apa
   locale: en
@@ -290,6 +290,12 @@ filtered_bibtex_keywords: [abbr, abstract, arxiv, bibtex_show, html, pdf, select
 max_author_limit: 3  # leave blank to always show all authors
 more_authors_animation_delay: 10  # more authors are revealed on click using animation; smaller delay means faster animation
 
+# New LR 
+sort_by: date
+order: descending
+type_order: [article, inbook, book, unpublished, misc, report, conference, incollections, inproceedings, proceedings]
+type_names: {unpublished: working papers, report: reports, article: journal articles, 
+      inproceedings: conference articles & others}
 
 # -----------------------------------------------------------------------------
 # Jekyll Link Attributes
