--- a/_config.yml
+++ b/_config.yml
@@ -290,7 +290,7 @@ max_author_limit: 3  # leave blank to always show all authors
 more_authors_animation_delay: 10  # more authors are revealed on click using animation; smaller delay means faster animation
 
 # New LR 
-sort_by: date
+sort_by: year
 order: descending
 type_order: [article, inbook, book, unpublished, misc, report, conference, incollections, inproceedings, proceedings]
 type_names: {unpublished: working papers, report: reports, article: journal articles, 
