--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -18,3 +18,6 @@
   - firstname: ["Maximiliano"]
     url: https://www.maximilianososa.com/
 
+"Pinchbeck":
+  - firstname: ["Edward"]
+    url: https://sites.google.com/site/edwardwpinchbeck/home
